DTS-48978: implement innovation rate